# Geodesic-Library

./: CMakeLists.txt  temp.txt
dependencies/Test/: KarneyFF_Test.hpp  Point_Test.hpp  Shape_Test.hpp  Sign_Test.hpp  Test_Main.cpp  testlib.hpp
dependencies/include/: GeoMath.hpp  Geodesic.hpp  KarneyFF.hpp  Point.hpp  Shapes.hpp
dependencies/lib/: KarneyFF.cpp  Point.cpp  Shapes.cpp
src/: main.cpp
